fixed column spacing of buttons

--- a/angular_app_frontend/features/checkout/checkout-list/checkout-list.scss
+++ b/angular_app_frontend/features/checkout/checkout-list/checkout-list.scss
@@ -416,7 +416,7 @@ checkout-image-block.col-sm-2 {
 
 .hide-service {
   color: $warm-grey;
-  text-decoration: underline;
+  //text-decoration: underline;
 }
 
 .service-row {
