--- a/static/main.css
+++ b/static/main.css
@@ -2903,8 +2903,7 @@ checkout-image-block.col-sm-2 {
   right: 0; }
 
 .hide-service {
-  color: #9b9b9b;
-  text-decoration: underline; }
+  color: #9b9b9b; }
 
 .service-row {
   position: relative; }
